pls stop enforcing newlines and newpages

--- a/report/appendices.tex
+++ b/report/appendices.tex
@@ -1,4 +1,4 @@
-\section{Forward Engineered Database}
+\section{Forward Engineered Database} \label{app:db}
 
 Content of the file TrainManagement.sql:
 
@@ -6,7 +6,7 @@ Content of the file TrainManagement.sql:
 {../TrainManagement.sql}
 
 
-\section{Data manipulation script}
+\section{Data manipulation script} \label{app:data}
 
 Content of the file DataManipulation.sql:
 
@@ -14,7 +14,7 @@ Content of the file DataManipulation.sql:
 {../DataManipulation.sql}
 
 
-\section{SQL programming script}
+\section{SQL programming script} \label{app:prog}
 
 Content of the file Programming.sql:
 
