--- a/report/implementation.tex
+++ b/report/implementation.tex
@@ -29,7 +29,7 @@ having the special value \emph{null}.
 \subsection{MySQL EER Diagram}
 
 As described above the EER diagram, seen in Figure~\ref{fig:EER}, was made from 
-the hand drawn Entity Relation Diagram show in Figure~\ref{fig:ER}.
+the Entity Relation Diagram show in Figure~\ref{fig:ER}.
 
 Although the EER diagram only is a model and not a database itself. The diagram 
 representation is so precise a description of the database, that the database 
